add doggo to db

--- a/public/auth/account.css
+++ b/public/auth/account.css
@@ -58,3 +58,17 @@ body {
     min-height: 100vh;
     background-repeat: no-repeat;
 }
+
+textarea {
+    width: 30%;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    resize: none;
+    margin-top: 16px;
+    margin-bottom: 16px;
+    margin-left: 100px;
+
+  }
