add doggo to db

--- a/public/doggos/doggos.css
+++ b/public/doggos/doggos.css
@@ -25,3 +25,26 @@ margin: 25px;
 }
 
 
+.floating-btn {
+  background-color: #AFC7D0;
+  width: 70px;
+  position: fixed;
+  bottom: 40px;
+  right: 40px;
+  vertical-align: middle;
+  font-size: 50px;
+  text-align: center;
+  line-height: 70px;
+  border-radius: 100%;
+}
+
+.floating-btn:hover {
+  background-color: pink;
+}
+
+a {
+  font-family: 'Thasadith', sans-serif;
+  font-weight: 700; 
+  color: whitesmoke !important; 
+  text-transform: uppercase; 
+}
